# summity-hackathon

./: .gitignore  .prettierignore  package.json  pnpm-lock.yaml  tailwind.config.ts
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
server/: .dockerignore  .env  .gcloudignore  Dockerfile  main.py  pyproject.toml  requirements.txt
server/functions/: youtube.py
server/prisma/: schema.prisma
server/prisma/migrations/20240304104155_init/: migration.sql
server/prisma/migrations/20240304210420_add_video_table/: migration.sql
server/prisma/migrations/20240304211427_update_video_records/: migration.sql
server/prisma/migrations/20240304221106_add_video_records/: migration.sql
server/prisma/migrations/20240304221202_add_video_records/: migration.sql
server/prisma/migrations/20240304221950_update_video_records_optional/: migration.sql
server/prisma/migrations/20240305211802_add_user_and_remove_message/: migration.sql
server/prisma/migrations/20240305221102_add_user_record_to_video/: migration.sql
server/prisma/migrations/20240305222925_update_naming_conventions/: migration.sql
server/prisma/migrations/20240305225240_add_extension_record_to_video/: migration.sql
server/server/: user.py  video.py  youtube.py
server/server/entities/: transcription.py  translation.py  user.py  youtube.py
server/server/functions/: transcription.py  translate.py  youtube.py
server/server/libs/: prisma_client.py
server/server/repositories/: translation.py  user.py  video.py  youtube.py
server/server/services/: transcription.py  youtube.py
(+27 files in other folders)
