[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["poteitoo <1105tigery@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prisma = "^0.12.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
black = "^24.2.0"
google-api-python-client = "^2.120.0"
yt-dlp = "^2023.12.30"
replicate = "^0.24.0"
isort = "^5.13.2"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
